# trade-learn

./: .dockerignore  .gitignore  .pypirc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  README_en.md  README_ja.md  README_zh.md  backtrader_compat_refactor.md  explore.html  factor_analysis.html  mkdocs.yml  out.txt  pyproject.toml  recovered-file.txt  report.html  requirements.txt  scratch.py  setup.py  stats.json  test_quick.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: baseline.json  stage3_migration_blockers.json
benchmarks/runners/: __init__.py  benchmark_bt.py  benchmark_research_pipeline.py  benchmark_target_weight_parity.py  benchmark_target_weights.py  benchmark_throughput.py  compare_backtesting.py  profile_benchmark.py  profile_callers.py  speed_test_backtesting.py  stress_benchmark.py
demos/: __init__.py  rf_fund.py  rsi_single.py  sma_single.py
docs/: BACKTESTING_COMPAT.md  PROGRESS.md  PROJECT.md  PROJECT_STRUCTURE.md  README.md  RUNBOOK.md  backtrader_compat_refactor.md  benchmarks.md  quickstart.md
docs/api/: engine.md  lite.md  reference.md  strategy.md
docs/concepts/: api-boundary.md  architecture.md  data-model.md  runtime.md  rust-live-runtime-roadmap.md  stats.md
docs/guides/: causal.md  component-usage.md  data.md  engine-api.md  engine.md  extensions.md  factor.md  indicators.md  lite-api.md  lite.md  live.md  mlflow-lab-mcp.md  optimization.md  report.md  research.md  strategy.md
docs/internal/: agent-loop.md  event-loop.md  matching-design.md  portfolio.md
docs/internals/: consistency.md  contracts.md  event-loop.md  matching.md  migration.md  portfolio.md
docs/release/: evaluation.md
docs/specs/: ARCHITECTURE.md  BACKTEST_SPEC.md  CONSISTENCY.md  CONTRACTS.md  INDICATORS_SPEC.md  METRICS_SPEC.md  MIGRATION.md  REPORT_SPEC.md  STRATEGY_SPEC.md
examples/: 01_quickstart.py  02_sma_cross.py  03_rf_rotation.py  06_turtle.py  07_rsi_enhanced.py  09_macd_settings.py  __init__.py  full_workflow_engine.py  full_workflow_lite.py  migration.py  ml_strategy.py  quickstart.py  tutorials.py
examples/backtesting/: 02_macd.py  03_1x_sma_cross.py  04_1x_bollinger.py  05_1x_macd.py  06_1x_grid_trade.py  07_1x_turtle.py  99_feature_surface.py  backtesting.py  compare_results.py  ema_cross.py  macd.py  speed_test_pro.py
examples/backtrader/: 01_quickstart.py  02_sma_cross.py  03_rf_rotation.py  04_ml_gbm.py  05_migration.py  06_turtle.py  07_rsi_enhanced.py  08_better_ma.py  09_macd_settings.py  10_order_execution.py  12_asset_class_portfolios.py  99_feature_surface.py  __init__.py
examples/engine/: 01_quickstart.py  03_rf_rotation.py  04_ml_gbm.py  08_better_ma.py  10_order_execution.py  11_target_percent_portfolio.py  __init__.py
examples/lite/: 01_ema_cross.py  02_macd.py  03_sma_cross.py  04_bollinger.py  05_macd.py  06_grid_trade.py  07_turtle.py
examples/research/: __init__.py  index_enhance_engine.py  index_enhance_engine_live.py  index_enhance_engine_pipeline.py  index_enhance_lite.py  index_enhance_lite_live.py  index_enhance_lite_pipeline.py
res/: explore.html
rust/tradelearn-rust/: Cargo.toml
rust/tradelearn-rust/src/: core.rs  engine.rs  factor.rs  lib.rs  matching.rs  resampler.rs  runner.rs  types.rs
rust/tradelearn-rust/tests/: arrow_callback.rs  core_contracts.rs  matching.rs  multi_data_feed.rs  portfolio.rs
scratch/: compare_quickstart.py  debug_quickstart.py  debug_sma.py
scripts/: alpha_metadata_cli.py  build_golden.py  check_alpha_metadata.py  check_design_notes.py  check_docs_completeness.py  check_golden_readiness.py  check_oracle.py  check_pynecore_poc.py  check_release_golden.py  check_stage3_benchmark.py  check_stage3_migration.py  compare_golden.py  generate_api_reference.py  generate_benchmark_page.py  generate_comparison_page.py  generate_demo_data.py  render_alpha_known_differences.py  run_backtrader_oracle.py  run_small_golden_smoke.py
scripts/examples/: __init__.py  compat_test.py  ml_strategy.py  rf_fund.py
tests/: __init__.py  test_automl.py  test_backtest.py  test_causal.py  test_derive.py  test_evaluate.py  test_examine.py  test_explore.py  test_query.py  test_trader.py
tests/consistency/: test_analyzers_facade.py  test_metrics.py  test_phase3_4_sync.py  test_phase3_alignment.py  test_phase3_alignment_full.py  test_stage0_scaffold.py
tests/data/: 600036SH.csv
tests/golden/: manifest.json  test_backtest_smoke.py  test_backtrader_parity.py  test_compare.py  test_manifest.py  test_oracle.py  test_readiness.py  test_tv_subset_smoke.py
tests/plots/: full_tearsheet.html
tests/runners/: __init__.py  benchmark_bt.py  compare_backtesting.py  compat_test.py  debug_bt_minperiod.py  debug_donchian.py  debug_minperiod.py  debug_mismatch.py  debug_tl_minperiod.py  debug_values.py  ml_strategy.py  profile_benchmark.py  profile_callers.py  rf_fund.py  speed_test_backtesting.py  stress_benchmark.py
tests/smoke/: test_migration.py  test_tutorials.py
tests/unit/: test_cli.py  test_design_notes.py  test_hs300_pipeline_helpers.py  test_lab.py  test_mcp.py  test_optimize.py  test_portfolio.py  test_rust_extension.py  test_stage3_migration.py  test_user_feature_surface.py
tradelearn/: __init__.py  cli.py  lab.py  optimize.py  portfolio.py
tradelearn/automl/: __init__.py  automl.py
tradelearn/backtest/: __init__.py  analyzer.py  analyzers.py  base.py  broker.py  cerebro.py  data.py  datafeed.py  engine.py  event_runner.py  feed.py  grid.py  history.py  indicator_cache.py  lines.py  metrics_engine.py  models.py  optimize.py  reporting.py  resampler.py  runtime_config.py  rust_broker.py  sizer.py  strategy.py  targets.py
tradelearn/brokers/: __init__.py  qmt.py
tradelearn/cli/: __init__.py
tradelearn/compat/: __init__.py
tradelearn/core/: __init__.py  broker_contracts.py  broker_events.py  config.py  contracts.py  costs.py  errors.py  logging.py  progress.py  seed.py  time.py
tradelearn/data/: __init__.py  bars.py  cache.py  duckdb_backend.py  explore.py  (+3 more)
(+788 files in other folders)
