[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "trade-learn"
version = "0.2.2"
description = "Python quantitative research framework for traditional and ML strategies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "trade-learn contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26",
    "pandas",
    "scipy",
    "scikit-learn",
    "opentdx; python_version >= '3.12'",
    "pyarrow",
    "pandas-ta-classic",
    "tradingview-datafeed",
    "TA-Lib",
    "pynesys-pynecore; python_version >= '3.11'",
    "xlsxwriter",
    "bokeh",
    "causal-learn",
    "tqdm",
    "typer",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/MuuYesen/trade-learn"
Documentation = "https://muuyesen.github.io/trade-learn/"

[project.scripts]
tradelearn = "tradelearn.cli:main"

[project.optional-dependencies]
lab = [
    "jupyterlab",
    "jupyterlab-git",
    "ipywidgets",
    "jupyter-ai",
    "pygwalker",
    "mcp>=1.8.0",
]
mlflow = [
    "mlflow",
]
all = [
    "jupyterlab",
    "jupyterlab-git",
    "ipywidgets",
    "jupyter-ai",
    "pygwalker",
    "mcp>=1.8.0",
    "mlflow",
    "Riskfolio-Lib",
    "optuna",
    "duckdb",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "interrogate",
    "cibuildwheel",
]
docs = [
    "mkdocs-material",
    "mkdocstrings-python",
]

[dependency-groups]
oracle = [
    "backtesting>=0.6.5",
    "backtrader",
    "opentdx; python_version >= '3.12'",
]

[tool.setuptools.packages.find]
include = ["tradelearn*"]
exclude = ["reference*", "tests*"]

[tool.maturin]
manifest-path = "rust/tradelearn-rust/Cargo.toml"
module-name = "tradelearn._rust"
python-source = "."
features = ["extension-module"]
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "NOTICE", format = "sdist" },
]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_*"
test-command = "python -c \"import tradelearn._rust as rust; assert rust.tradelearn_rust_version() == '0.2.2'\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/golden", "tests/consistency"]
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
fail-under = 90
exclude = ["setup.py", "reference", "tests"]
