[package]
name = "tradelearn-rust"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "_rust"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["dep:pyo3", "pyo3/extension-module", "dep:numpy"]

[dependencies]
pyo3 = { version = "0.23", optional = true }
numpy = { version = "0.23", optional = true }
