[package]
name = "tradelearn-rust"
version = "0.2.4"
edition = "2021"
license = "Apache-2.0"
description = "Rust event-driven backtest kernel for trade-learn."
homepage = "https://github.com/MuuYesen/trade-learn"
repository = "https://github.com/MuuYesen/trade-learn"
documentation = "https://muuyesen.github.io/trade-learn/"
publish = false

[lib]
name = "_rust"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = { version = "0.28" }
